# ricks-basement

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml
.agents/skills/ricks-basement-backend/: SKILL.md
.agents/skills/ricks-basement-codex-hooks/: SKILL.md
.agents/skills/ricks-basement-frontend/: SKILL.md
.agents/skills/ricks-basement-maintainer/: SKILL.md
.codex/: hooks.json
.codex/hooks/: emit_event.py  hook_common.py  install_hooks.py  simulate_events.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  db.py  event_processor.py  main.py  privacy.py  replay.py  schemas.py  settings.py  websocket_manager.py
backend/tests/: test_events.py  test_hooks.py  test_privacy.py  test_replay.py
docs/: README.md
frontend/: eslint.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/basement/: BasementShell.tsx  ContainmentLock.tsx  DroneBay.tsx  ExperimentLog.tsx  MemoryCore.tsx  PrivacyPanel.tsx  ReactorStatus.tsx  SessionReplay.tsx  ToolConsole.tsx  TopStatusBar.tsx
frontend/src/components/pixel/: EventBubble.tsx  PixelBasementScene.ts  (+11 more)
frontend/src/lib/: api.ts  eventTypes.ts  format.ts  privacy.ts  websocket.ts
frontend/src/stores/: useBasementStore.ts  useSettingsStore.ts
frontend/src/tests/: eventReducer.test.ts
(+16 files in other folders)
